200409 updates at noon

--- a/BeautifulSoup-Selenium/beautifulsoup.ipynb
+++ b/BeautifulSoup-Selenium/beautifulsoup.ipynb
@@ -2974,12 +2974,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3625,7 +3620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3647,23 +3642,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'driver' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-6b340ab91669>, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-4e82bafbc0cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# 크롬 드라이브 받은 경로 써주기 ↑\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'http://istarbucks.co.kr/store/store_map.do'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# time.sleep(20)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'driver' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-6b340ab91669>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    driver.find_element_by_\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "# driver = webdriver.Remote(\"http://selenium:4444/wd/hub\", DesiredCapabilities.CHROME)\n",
+    "driver = webdriver.Remote(\"http://selenium:4444/wd/hub\", DesiredCapabilities.CHROME/\n",
     "# driver = webdriver.Chrome('./crawling/data/chromedriver') - 로컬의 경우\n",
     "# 크롬 드라이브 받은 경로 써주기 ↑\n",
     "\n",
@@ -3671,7 +3663,7 @@
     "# time.sleep(20)\n",
     "\n",
     "driver.find_element_by_\n",
-    "source = drivaer.page_source\n",
+    "source = driver.page_source\n",
     "print(source)\n",
     "soup = BeautifulSoup(source, 'html.parser')\n",
     "print(soup.select)"
