--- a/BeautifulSoup-Selenium/beautifulsoup.ipynb
+++ b/BeautifulSoup-Selenium/beautifulsoup.ipynb
@@ -3655,7 +3655,7 @@
     }
    ],
    "source": [
-    "driver = webdriver.Remote(\"http://selenium:4444/wd/hub\", DesiredCapabilities.CHROME/\n",
+    "# driver = webdriver.Remote(\"http://selenium:4444/wd/hub\", DesiredCapabilities.CHROME/\n",
     "# driver = webdriver.Chrome('./crawling/data/chromedriver') - 로컬의 경우\n",
     "# 크롬 드라이브 받은 경로 써주기 ↑\n",
     "\n",
