200411 updates at noon

--- a/folium/02_kakaoApi위도경도.ipynb
+++ b/folium/02_kakaoApi위도경도.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,24 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# API를 이용한 http통신을 통해서 획득\n",
     "# requests, urllib, beautifulSop, Selenium등등이 웹 크롤링 기술 대상 모듈이다.\n",
     "\n",
-    "KAKAO_API_KEY='.........................'\n",
+    "KAKAO_API_KEY='8b29c5e3e8f621935fec288e5841e69c' # REST API 키\n",
     "url = '''\n",
     "https://dapi.kakao.com/v2/local/search/keyword.json?query={0}&category_group_code=PO3\n",
-    "'''.format('제주시청')\n",
+    "'''.format('제주시청') # 부산시청 try it !\n",
     "headers={'Authorization': 'KakaoAK {0}'.format(KAKAO_API_KEY)}\n",
     "res = requests.get(url, headers=headers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'documents': [{'address_name': '제주특별자치도 제주시 이도2동 1176-1',\n",
+       "   'category_group_code': 'PO3',\n",
+       "   'category_group_name': '공공기관',\n",
+       "   'category_name': '사회,공공기관 > 지방행정기관 > 시청',\n",
+       "   'distance': '',\n",
+       "   'id': '8064058',\n",
+       "   'phone': '064-120',\n",
+       "   'place_name': '제주시청',\n",
+       "   'place_url': 'http://place.map.kakao.com/8064058',\n",
+       "   'road_address_name': '제주특별자치도 제주시 광양9길 10',\n",
+       "   'x': '126.531171087129',\n",
+       "   'y': '33.4995342412698'},\n",
+       "  {'address_name': '제주특별자치도 서귀포시 서홍동 440-1',\n",
+       "   'category_group_code': 'PO3',\n",
+       "   'category_group_name': '공공기관',\n",
+       "   'category_name': '사회,공공기관 > 지방행정기관 > 시청',\n",
+       "   'distance': '',\n",
+       "   'id': '10503563',\n",
+       "   'phone': '064-120',\n",
+       "   'place_name': '서귀포시청 제1청사',\n",
+       "   'place_url': 'http://place.map.kakao.com/10503563',\n",
+       "   'road_address_name': '제주특별자치도 서귀포시 중앙로 105',\n",
+       "   'x': '126.55956346690888',\n",
+       "   'y': '33.254064625579836'},\n",
+       "  {'address_name': '제주특별자치도 서귀포시 법환동 731',\n",
+       "   'category_group_code': 'PO3',\n",
+       "   'category_group_name': '공공기관',\n",
+       "   'category_name': '사회,공공기관 > 지방행정기관 > 시청',\n",
+       "   'distance': '',\n",
+       "   'id': '7938161',\n",
+       "   'phone': '064-120',\n",
+       "   'place_name': '서귀포시청 제2청사',\n",
+       "   'place_url': 'http://place.map.kakao.com/7938161',\n",
+       "   'road_address_name': '제주특별자치도 서귀포시 신중로 55',\n",
+       "   'x': '126.510542736677',\n",
+       "   'y': '33.2556629640412'}],\n",
+       " 'meta': {'is_end': True,\n",
+       "  'pageable_count': 3,\n",
+       "  'same_name': {'keyword': '제주시청', 'region': [], 'selected_region': ''},\n",
+       "  'total_count': 3}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -63,15 +122,15 @@
     }
    ],
    "source": [
-    "print(res['documents'][0]['address_name'],\n",
-    "res['documents'][0]['y'],\n",
-    "res['documents'][0]['x'],\n",
+    "print(res['documents'][0]['address_name'], \n",
+    "res['documents'][0]['y'], # y값 먼저 출력하고\n",
+    "res['documents'][0]['x'], # 그 다음, x값 출력\n",
     "res['documents'][0]['place_name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +160,7 @@
        "('제주특별자치도 서귀포시 신효동 1120-5', '33.2607718100396', '126.60775561985', '효돈119센터')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
